fixed the header bar layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,19 @@
-body {  padding-top: 3em; font-family: Arial; }
+body { font-family: Arial; }
 
 .nav-masthead {
-  margin-bottom: 3rem;
   background-color: #428bca;
   -webkit-box-shadow: inset 0 -.1rem .25rem rgba(0,0,0,.1);
           box-shadow: inset 0 -.1rem .25rem rgba(0,0,0,.1);
 }
 
 /* Nav links */
+.nav {
+	min-height: 53px;
+}
+
+.nav-signin {
+	padding: 15px 0px 10px 0px;
+}
 .nav-link {
   position: relative;
   padding: 1rem .5rem .8rem .5rem;
@@ -26,7 +32,7 @@ body {  padding-top: 3em; font-family: Arial; }
 }
 
 .brand-logo {
-	margin: 12px 10px;
+	padding: 12px 10px;
 }
 
 .bg-white {
@@ -39,7 +45,6 @@ body {  padding-top: 3em; font-family: Arial; }
 	padding: 6px 0px;
 }
 
-.content-container .heading, 
 .content-container h1,
 .content-container h2,
 .content-container h3 {
@@ -48,7 +53,7 @@ body {  padding-top: 3em; font-family: Arial; }
 
 .content-container .task-link {
 	position: absolute;
-	top: 11px;
+	top: 56px;
 	right: 18px;
 }
 
@@ -77,21 +82,21 @@ body {  padding-top: 3em; font-family: Arial; }
 }
 
 .documents .icon-1 {
-	position: absolute;
-	bottom: 105px;
+	position: relative;
+	bottom: 30px;
 	left: 300px;
 }
 
 .documents .icon-2 {
-	position: absolute;
-	bottom: 70px;
+	position: relative;
+	bottom: 30px;
 	left: 300px;
 }
 
 .documents .icon-3 {
-	position: absolute;
-	bottom: 70px;
-	left: 318px;
+	position: relative;
+	bottom: 30px;
+	left: 305px;
 }
 
 .documents .blue {
